Refactor: Move lsp/dap keybindings to lua with new neovim api

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,10 @@ shell /usr/bin/fish
 font_family      SauceCodePro Nerd Font
 bold_font        SauceCodePro Nerd Font
 italic_font      SauceCodePro Nerd Font
-font_size 10.0
+font_size 9.0
+
+map ctrl+shift+plus change_font_size all +2.0
+map ctrl+shift+minus change_font_size all -2.0
 
 
 ## name: Tokyo Night Storm
