New tmux bindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,6 +11,9 @@ bind-key C-x setw synchronize-panes
 setw -g window-status-current-format '#{?pane_synchronized,#[bg=red],}#I:#W'
 setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
 
+# if detached sessions exist, the client is switched to the most recently active.
+set-option -g detach-on-destroy off
+
 # shell
 set-option -g default-shell /usr/bin/fish
 
@@ -35,4 +38,6 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 
 # todo
-bind -r T split-window -b -p 35 -h -c "#{pane_current_path}" "nvim ~/Documents/todo.md"
+#bind -r T split-window -b -p 35 -h -c "#{pane_current_path}" "nvim ~/Documents/todo.md"
+bind T display-popup -E "tt"
+bind L display-popup -E -h 90% -w 90% "lazygit"
