--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,11 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+unbind r
+bind r source-file ~/.tmux.conf
+
+set-option -g status-position top
+
 # start at 1
 set -g base-index 1
 
@@ -15,7 +20,7 @@ setw -g window-status-format         '#{?pane_synchronized,#[bg=red],}#I:#W'
 set-option -g detach-on-destroy off
 
 # shell
-set-option -g default-shell /usr/bin/fish
+#set-option -g default-shell /usr/bin/fish
 
 # movement
 set -g mouse on
@@ -26,18 +31,22 @@ bind l select-pane -R
 
 # size to lowest screen
 set-window-option -g aggressive-resize on
+set-option -u window-size
+set-option window-size largest
+
 
 # true color
 #set -ga terminal-overrides ",xterm-256color:Tc"
-set -g default-terminal "${TERM}"
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+#set -g default-terminal "${TERM}"
+#set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+#set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
 # neovim performance advice
 set-option -sg escape-time 10
 set-option -g focus-events on
 
 # todo
-#bind -r T split-window -b -p 35 -h -c "#{pane_current_path}" "nvim ~/Documents/todo.md"
-bind T display-popup -E "tt"
-bind L display-popup -E -h 90% -w 90% "lazygit"
+#bind T display-popup -E "tt"
+bind l display-popup -E -h 90% -w 90% "lazygit"
+unbind t
+bind t display-popup -E "~/Documents/rust/tmux-switcher/target/release/tmux-switcher"
