--- a/.tmux.conf
+++ b/.tmux.conf
@@ -47,6 +47,6 @@ set-option -g focus-events on
 
 # todo
 #bind T display-popup -E "tt"
-bind l display-popup -E -h 90% -w 90% "lazygit"
+bind gu display-popup -E -h 94% -w 90% "lazygit"
 unbind t
 bind t display-popup -E "~/Documents/rust/tmux-switcher/target/release/tmux-switcher"
