Remove unused plugins

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $right l
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec wezterm-gui
 
 # kill focused window
 bindsym $mod+Shift+q kill
